--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,6 @@
 			<div id="fretboard" class="main"></div>
 		</main>
 
-		<script type="text/javascript" src="./index.js"></script>
+		<script type="module" src="./index.js"></script>
 	</body>
 </html>
