add the rest of the controls, and the beginning of the fretboard (with a dev version of svg.js)

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
 			<div id="fretboard" class="main"></div>
 		</main>
 
+		<script src="./deps/svg.js"></script>
 		<script type="module" src="./index.js"></script>
 	</body>
 </html>
