--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<link rel="stylesheet" type="text/css" href="./style.css" />
+		<link rel="stylesheet" type="text/css" href="./styles/normalize.css" />
+		<link rel="stylesheet" type="text/css" href="./styles/style.css" />
 	</head>
 	<body>
 		<header>
@@ -15,6 +16,7 @@
 
 		<main>
 			<div class="controls">
+				<div id="instruments"></div>
 				<div id="keys"></div>
 				<div id="scales"></div>
 			</div>
